--- a/tensorflowjs/src/index.html
+++ b/tensorflowjs/src/index.html
@@ -4,6 +4,11 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 </head>
 <body>
-<div id='log'></div>
+<div id='log'>
+  <form id='console'>
+    <input id='console-input' style='width: 100%' autofocus />
+  </form>
+</div>
+<video autoplay playsinline muted id="webcam" width="224" height="224"></video>
 </body>
 </html>
