--- a/tensorflowjs/src/index.html
+++ b/tensorflowjs/src/index.html
@@ -6,9 +6,10 @@
 <body>
 <div id='log'>
   <form id='console'>
-    <input id='console-input' style='width: 100%' autofocus />
+    <input id='console-input' style='width: 100%' autofocus/>
   </form>
 </div>
 <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
+<canvas id='overlay' width="224" height="224" style='margin-left: -224px'></canvas>
 </body>
 </html>
