web-components native word-count

--- a/web-components/src/index.html
+++ b/web-components/src/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+  <link rel="import" href="word-count/word-count.html" id="word-count-link">
 </head>
 <body>
-<word-count text="Please count the number of words"></word-count>
+  <div id="root"></div>
 </body>
 </html>
