web-components: add polymer word counter

--- a/web-components/src/index.html
+++ b/web-components/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
   <link rel="import" href="word-count/word-count.html" id="word-count-link">
+  <link rel="import" href="polymer/polymer-word-count.html">
 </head>
 <body>
   <div id="root"></div>
