--- a/cv-portfolio/public/index.html
+++ b/cv-portfolio/public/index.html
@@ -23,6 +23,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Alon Yehezkel",
+        "url": "https://www.alony.info",
+        "image": "https://www.alony.info/images/my-profile.jpg",
+        "sameAs": [
+          "https://www.facebook.com/alon.yehezkel.1",
+          "https://twitter.com/alonn24",
+          "https://www.linkedin.com/in/alonn24",
+          "https://github.com/alonn24"
+        ],
+        "jobTitle": "Software Engineer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Bookaway"
+        }
+      }
+    </script>
   <title>Alon Yehezkel's CV</title>
 </head>
 
