--- a/cv-portfolio/public/index.html
+++ b/cv-portfolio/public/index.html
@@ -6,8 +6,19 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="Description" content="Resume of an experienced, professional software engineer." />
+  
+  <title>Alon Yehezkel's CV</title>
+  <meta name="description" content="Resume of an experienced, professional software engineer." />
   <meta name="keywords" content="resume, software, web, javascript, nodejs, fullstack, cloud">
+  <meta property="og:title" content="Alon Yehezkel's CV" />
+  <meta property="og:url" content="%PUBLIC_URL%/images/cover.jpg" />
+  <meta property="og:description" content="Resume of an experienced, professional software engineer." />
+  <meta property="og:image" content="%PUBLIC_URL%/images/cover.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Alon Yehezkel's CV" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/images/cover.jpg" />
+  <meta name="twitter:description" content="Resume of an experienced, professional software engineer." />
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,27 +34,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org/",
-        "@type": "Person",
-        "name": "Alon Yehezkel",
-        "url": "https://www.alony.info",
-        "image": "https://www.alony.info/images/my-profile.jpg",
-        "sameAs": [
-          "https://www.facebook.com/alon.yehezkel.1",
-          "https://twitter.com/alonn24",
-          "https://www.linkedin.com/in/alonn24",
-          "https://github.com/alonn24"
-        ],
-        "jobTitle": "Software Engineer",
-        "worksFor": {
-          "@type": "Organization",
-          "name": "Bookaway"
-        }
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Person",
+      "name": "Alon Yehezkel",
+      "url": "https://www.alony.info",
+      "image": "https://www.alony.info/images/my-profile.jpg",
+      "sameAs": [
+        "https://www.facebook.com/alon.yehezkel.1",
+        "https://twitter.com/alonn24",
+        "https://www.linkedin.com/in/alonn24",
+        "https://github.com/alonn24"
+      ],
+      "jobTitle": "Software Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Bookaway"
       }
-    </script>
-  <title>Alon Yehezkel's CV</title>
+    }
+  </script>
 </head>
 
 <body>
