--- a/cv-portfolio/public/index.html
+++ b/cv-portfolio/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  
+
   <title>Alon Yehezkel's CV</title>
   <meta name="description" content="Resume of an experienced, professional software engineer." />
   <meta name="keywords" content="resume, software, web, javascript, nodejs, fullstack, cloud">
@@ -39,8 +39,8 @@
       "@context": "https://schema.org/",
       "@type": "Person",
       "name": "Alon Yehezkel",
-      "url": "https://www.alony.info",
-      "image": "https://www.alony.info/images/my-profile.jpg",
+      "url": "https://alonn24.github.io",
+      "image": "https://alonn24.github.io/images/my-profile.png",
       "sameAs": [
         "https://www.facebook.com/alon.yehezkel.1",
         "https://twitter.com/alonn24",
